# house-of-plantagent

./: .env  .env.example  .gitignore  LLM-dev.md  PROGRESS_DIARY.md  README.md  TODO.md  app.py  apply_ruff_format_and_fixes.sh  house_of_plantagent-v1.py  install_project.sh  output_check.md  progress.md  pyproject.toml  recipe_api_with_title.py  start.ipynb  thought_process.md
.github/: copilot-instructions.md
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
archive/: ollama-experiment.ipynb  single_llm_call.py
archived_src/archived_code/: agent.py  middleware.py  system_prompt.py  tools.py
archived_src/house_of_plantagent.egg-info/: requires.txt
house_of_plantagent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
notebook-experiments/: huggingface_experiment.ipynb  langchain_agent.ipynb  llm_experiment.ipynb  nutrition_website.ipynb  recipe_api_with_title.ipynb  simplified_search.ipynb  tavily_ya_mama.py
src/: agent.py  middleware.py  system_prompt.py  tools.py
src/house_of_plantagent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: output_check.md
